# otus-3

./: CMakeLists.txt  alloc.hpp  main.cpp
debpack/_CPack_Packages/Linux/DEB/: alloc.0.0.1--Linux.deb
debpack/_CPack_Packages/Linux/DEB/alloc.0.0.1--Linux/: control
